--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "club",
   "version": "1.0.0",
+  "description": "My OpenAI project",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "dotenv": "^16.0.3",
+    "openai": "^4.0.0"
   }
 }
+
