--- a/package.json
+++ b/package.json
@@ -11,3 +11,18 @@
     "cors": "^2.8.5"
   }
 }
+{
+  "name": "club",
+  "version": "1.0.0",
+  "type": "module",  // Ezt add hozzá!
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "openai": "^4.0.0"
+  }
+}
+
