--- a/package.json
+++ b/package.json
@@ -1,20 +1,7 @@
 {
   "name": "club",
   "version": "1.0.0",
-  "description": "My Render Deployment",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
-  }
-}
-{
-  "name": "club",
-  "version": "1.0.0",
-  "type": "module",  // Ezt add hozzá!
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -25,4 +12,3 @@
     "openai": "^4.0.0"
   }
 }
-
