--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "openai": "^4.0.0"
+    "openai": "^4.0.0",
     "dotenv": "^16.0.0"
 }
   }
